Navbar position fixed + fixed scroll-x position overflow

--- a/frontend/src/components/HomeHero/homeHero.css
+++ b/frontend/src/components/HomeHero/homeHero.css
@@ -1,16 +1,17 @@
 .homeHero {
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     background-color: #2E2F2A;
     z-index: -1;
     position: relative;
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .homeHeroContainer {
     width: 50%;
-    max-width: 100vw;
+    max-width: 100%;
     margin: 0 auto;
 }
 
@@ -81,7 +82,7 @@
 
 
 .homeHeroContainerTopContainerTwoContainerDiv {
-    width: min(850px, 100vw);
+    width: min(850px, calc(100vw - 40px));
     height: 880px;
     /* background-color: darkred; */
     position: absolute;
