--- a/frontend/src/components/PropertiesCollectionLatestNews/propertiesCollectionLatestNews.css
+++ b/frontend/src/components/PropertiesCollectionLatestNews/propertiesCollectionLatestNews.css
@@ -340,12 +340,11 @@
     text-transform: uppercase;
     color: transparent;
     -webkit-text-stroke: 2px #C9823B;
-    text-stroke: 2px #C9823B; /* dla przeglądarek wspierających */
     letter-spacing: 2px;
 }
 
 .propertiesCollectionLatestNewsMarquee {
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
     position: relative;
 }
